--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "env-cmd -f .env nodemon src/server.js",
+    "start": "env-cmd -f .env node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "env-cmd -f dev.env nodemon src/server.js"
   },
