--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "env-cmd -f .env node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "env-cmd -f dev.env nodemon src/server.js"
+    "dev": "env-cmd -f .env nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "uuid": "^9.0.0"
   }
 }
